@@ -2,7 +2,8 @@
 
 	* seahorse.schemas.in: Added validity_threshold
 	* seahorse-recipients: Removed recips property, removed Add All and
-	Remove All, added validity checking using validity_threshold
+	Remove All, added validity checking using validity_threshold,
+	added status bars for selection
 
 2003-03-19  Jacob Perkins  <jap1@users.sourceforge.net>
 
